--- a/ex-7-VanOekelen-Yannick-2.0.html
+++ b/ex-7-VanOekelen-Yannick-2.0.html
@@ -1,7 +1,9 @@
+<!-- In samenwerking met genzo, jelle & kevin !-->
+<!-- Deze verzie is een 2.0 versie, vorige project was foutief opgeslagen met corruptie tot gevolg !-->
 
 <!DOCTYPE html>
 <html>
-<body>
+<body> <!-- Opmaaak bepalen !-->
 <style media="screen">
     h1, p {
         font-family: 'Roboto', sans-serif;
@@ -23,6 +25,7 @@
         background-color: #f5f5f5;
     }
 </style>
+<!-- Hoofding en tabel verwezelijken !-->
 <div>
     <h1>EX-7 Drone data: Yannick Van Oekelen</h1>
     <p>Loading the data, please have some patience it takes a while </p>
@@ -38,7 +41,7 @@
 </div>
 </body>
 
-<head>
+<head> <!-- Gegevens in tabel plaatsen !-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>EX-7 Drone data: Yannick Van Oekelen</title>
