1)Opnieuw begonnen aan opdracht, vorige file was corrupt 2)Stukken gehaald uit vorige oefening, missende stukken opnieuw aangevuld 3)Essentiële beschrijvingen geplaatst

--- a/ex-7-VanOekelen-Yannick-2.0.html
+++ b/ex-7-VanOekelen-Yannick-2.0.html
@@ -3,7 +3,7 @@
 
 <!DOCTYPE html>
 <html>
-<body> <!-- Opmaaak bepalen !-->
+<body> <!-- Opmaak bepalen !-->
 <style media="screen">
     h1, p {
         font-family: 'Roboto', sans-serif;
