1)Opnieuw begonnen aan opdracht, vorige file was corrupt 2)Stukken gehaald uit vorige oefening, missende stukken opnieuw aangevuld 3)Essentiële beschrijvingen geplaatst

--- a/ex-7-VanOekelen-Yannick-2.0.html
+++ b/ex-7-VanOekelen-Yannick-2.0.html
@@ -34,7 +34,7 @@
             <th>DRONE NAME</th>
             <th>DRONE MAC ADDRESS</th>
             <th>FILE  ID</th>
-            <th>First RECORD</th>
+            <th>FIRST RECORD</th>
             <th>LAST RECORD</th>
         </tr>
     </table>
